--- a/css/styles.css
+++ b/css/styles.css
@@ -4052,8 +4052,8 @@ textarea.form-control-lg {
   justify-content: space-between;
 }
 .navbar-brand {
-  padding-top: 0.3125rem;
-  padding-bottom: 0.3125rem;
+  /* padding-top: 0.3125rem;
+  padding-bottom: 0.3125rem; */
   margin-right: 1rem;
   font-size: 1.25rem;
   text-decoration: none;
@@ -4086,8 +4086,8 @@ textarea.form-control-lg {
 }
 
 .navbar-toggler {
-  padding: 0.25rem 0.75rem;
-  font-size: 1.25rem;
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
   line-height: 1;
   background-color: transparent;
   border: 1px solid transparent;
@@ -11341,12 +11341,12 @@ p {
 }
 
 #mainNav {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
+  /* padding-top: 1rem;
+  padding-bottom: 1rem; */
   background-color: #212529;
 }
 #mainNav .navbar-toggler {
-  padding: 0.75rem;
+  /* padding: 0.75rem; */
   font-size: 0.75rem;
   font-family: "Montserrat", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   text-transform: uppercase;
